# the-doors

./: .dockerignore  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  open-db.sh  the-doors.code-workspace  update-test-booking.sh
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
.sqlx/: query-4520017e25cb0ad5408e0f7f5a595738ab2d656727990c247a0b84a32964c1fe.json  query-a8ae00b78b70de4fe166a24b00d07a7bd5363b1e0879dc4a0e2f2bddc058b8c1.json  query-c63ac581f8e5103f4984d3b9bcb945f9bfa36c92e0901fc2774f771fdef2c6af.json  query-d66492e5f1f3a95f24021af131b27eac573e1353fc220e241e0b370af7bceb47.json
frontend/: .eslintrc.js  .gitignore  Caddyfile  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js
frontend/src/views/: Bookings.vue  Login.vue
src/: handlers.rs  jwt.rs  main.rs  models.rs  repository.rs
tmp/: init.sql
