[package]
name = "the-doors-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
